[package]
name = "shortener"
version = "0.1.0"
authors = ["Evan Gubarev <evan@evangubarev.com>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "shorten"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.62"
serde = { version = "1.0.123", features = ["derive"] }
colored = "2"
